responding to bill's edits

--- a/ch0-introduction/document.tex
+++ b/ch0-introduction/document.tex
@@ -1,52 +1,70 @@
 \chapter{Introduction}
 \label{c.intro}
 
-Up to XX\% of rain falling on land returns to the atmosphere by traveling through plant tissue before evaporating, a process called transpiration.  A large transpiration flux can increase atmospheric moisture content and downstream precipitation [cite precip recycling paper] and can keep the land surface cool by consuming XX\% of the net radiative energy at the land surface (XX W/m$^2$).  Plants actively control the rate of transpiration on short timescales by modulating the openness of small pores on their leaves called stomata.  Stomata respond to a range of environmental drivers, including water availability to roots and the drying capacity of the air, and different plant species respond differently to these drivers.  Thus, a forest composed of one tree species with certain stomatal responses can have different transpiration dynamics and thus a different effect on the atmosphere than a forest composed of another tree species.  
+In the global and annual average, 65\% of rain falling on land returns to the atmosphere through evaporation [\cite{trenberth2007}].  Most of the evaporated water in vegetated regions first travels through plant tissue before evaporating, a process called transpiration [\cite{wilson2001comparison}, \cite{dirmeyer2005second}, \cite{jasechko2013terrestrial}].  Transpiration affects the atmosphere: a large transpiration flux can increase atmospheric moisture content and downstream precipitation [\cite{ISI:A1996VD58700003}] and can keep the land surface cool by consuming a large fraction of the net radiative energy at the land surface.  Plants actively control the rate of transpiration on short timescales by modulating the openness of small pores on their leaves called stomata.  Stomata respond to a range of environmental drivers, including water availability to roots and the drying capacity of the air, and different plant species respond differently to these drivers.  A forest composed of one tree species with certain stomatal responses can have different transpiration dynamics and thus affect the atmosphere differently than a forest composed of another tree species.  
 
-In this dissertation, I use direct, tree-level measurements of water use to show that Douglas-firs, a common evergreen needleleaf tree species in the Northern California Coast Range, decrease their transpiration sharply in the summer dry season in response to a dry root zone; and in contrast, broadleaf evergreen tree species, especially Pacific madrones, transpire maximally in the summer dry season because they are much less sensitive to a dry root zone and to high atmospheric evaporative demand.  I scale up these tree-level observations to construct a bottom-up estimate of regional transpiration, and I use these regional estimates along with atmospheric models, one simple and one complex, to quantify the potential impact of species transpiration differences on regional summertime climate.  I extend the investigation of the sensitivity of California climate to evapotranspiration by testing the response of wind energy forecasts at a California wind farm to regional-scale perturbations in soil moisture, concluding that wind at this farm is sensitive on an operationally meaningful level to realistic soil moisture uncertainties.
+In this dissertation, I use direct, tree-level measurements of water use to show that Douglas-firs (\textit{Pseudotsuga menziesii}), a common evergreen needleleaf tree species in the Northern California Coast Range, decrease their transpiration sharply in the summer dry season in response to a dry root zone; and in contrast, broadleaf evergreen tree species, especially Pacific madrones (\textit{Arbutus menziesii}), transpire maximally in the summer dry season because their transpiration is much less sensitive to a dry root zone and increases continually in response to increasing atmospheric evaporative demand.  I scale up these tree-level observations to construct a bottom-up estimate of regional transpiration, and I use these regional estimates along with atmospheric models, one simple and one complex, to quantify the potential impact of species transpiration differences on regional summertime climate.  I extend the investigation of the sensitivity of California climate to evapotranspiration by testing the response of wind energy forecasts at a California wind farm to regional-scale perturbations in soil moisture, concluding that wind at this farm is sensitive on an operationally meaningful level to realistic soil moisture uncertainties.
 
 \section{Background}
 
 \subsection{Land surface energy balance}
 
-The land surface gains energy by absorbing radiation from the sun (higher frequency radiation, or ``short wave'') and from the atmosphere (lower frequency, or ``long wave'').  This energy gain is balanced by energy loss through emitted thermal radiation (``outgoing long wave''), conductive heat flux into the ground, and two types of turbulent heat fluxes.  These turbulent heat fluxes are (1) ``sensible heat'', or convective eddies carrying warmer air away from a hot land surface; and (2) ``latent heat'', which in atmospheric science refers to turbulent eddies carrying evaporated water vapor away from the land surface.  This evaporative flux is equivalent to an energy flux because the process of converting water from liquid to vapor consumes a large amount of energy; that energy is released later when the water vapor condenses, making the energy in water vapor ``latent''.
+The land surface gains energy by absorbing radiation from the sun (higher frequency radiation) and from the atmosphere (lower frequency radiation).  This energy gain is balanced by energy loss through emitted thermal radiation, conductive heat flux into the ground, and two types of turbulent heat fluxes.  These turbulent heat fluxes are (1) ``sensible heat'', or convective eddies carrying warmer air away from a hot land surface; and (2) ``latent heat'', which in atmospheric science refers to turbulent eddies carrying evaporated water vapor away from the land surface.  This evaporative flux is equivalent to an energy flux because the process of converting water from liquid to vapor consumes a large amount of energy; that energy is released later when the water vapor condenses, making the energy in water vapor ``latent''.
 
-Typical values for these fluxes are XX (from exit seminar).  XX amount of energy is required to evaporate XX mm of water, so XX latent heat flux translates to XX mm of liquid water evaporated.  Typical relative partitioning of net radiation between latent and sensible heat fluxes is XX for XX different scenarios.  Water limitation at the land surface (for instance, because of dry surface soil in a bare ground case, or because of closed stomata in a vegetated setting) reduces the latent heat flux and thus increases the surface temperature and the sensible heat flux to the lower atmosphere.
+\begin{figure}
+\begin{subfigure}{0.75\textwidth}
+\includegraphics[width=\textwidth]{ch0-introduction/energy_balance_wet.pdf}
+\caption{}
+\end{subfigure}
+\begin{subfigure}{0.75\textwidth}
+\includegraphics[width=\textwidth]{ch0-introduction/energy_balance_dry.pdf}
+\caption{}
+\end{subfigure}
+\caption{Typical midlatitude midday land surface energy balance for (a) wet soil and (b) dry soil.}
+\label{fig:intro_enbal}
+\end{figure}
+
+Figure \ref{fig:intro_enbal} shows the terms of the midday land surface energy balance when the soil is wet (Figure \ref{fig:intro_enbal}(a)) and when the soil is dry (Figure \ref{fig:intro_enbal}(b)).  In the midlatitudes at midday, typical net radiation is approximately 600 W/m$^2$, and roughly 5-10\% of that energy goes to the ground heat flux.  When water is readily available at the surface, the latent heat flux can consume 50\% or more of the net radiation minus ground heat flux.  A large amount of energy is required to evaporate water (evaporating a depth of 1 mm of water requires 2.26\e{^6} J/m$^2$), so even the relatively high latent heat flux of 270 W/m$^2$ translates to only 0.4 mm liquid water evaporated per hour.  Water limitation at the land surface (for instance, because of dry surface soil in a bare ground case, or because of closed stomata in a vegetated setting; Figure \ref{fig:intro_enbal}(b)) reduces the latent heat flux and thus increases the surface temperature and the sensible heat flux to the lower atmosphere.
+
+\subsection{Influence of evapotranspiration on the atmosphere}
+
+The partitioning of surface energy between latent heat and sensible heat affects atmospheric temperature, humidity, and circulations.  During the daytime, sensible heat drives buoyant convection from the surface, deepening the well-mixed atmospheric boundary layer (the lower 1-2 km of the daytime atmosphere that interacts rapidly with the surface).  Greater evapotranspiration reduces the land surface temperature and the sensible heat flux.  With a larger flux of water vapor and a smaller flux of sensible heat, the atmospheric boundary layer tends to be shallower, cooler, and moister, with the exact outcome depending on background conditions like radiation, clouds, and free troposphere stability and humidity.
+
+Horizontal differences in the partitioning of turbulent heat fluxes can drive local- to regional-scale circulations.  In areas with more sensible heat flux, the boundary layer tends to warm, reducing the density of the air and generating a zone of low pressure.  The difference in pressure relative to adjacent regions with lower sensible heat flux (and thus cooler temperature, higher low-level density and higher pressure) can drive wind circulations.  Coherent circulations can form when the length scale of land surface heat flux variation is 5-10 km or greater [\cite{avissar1998evaluation}].
 
 \subsection{Plant control of transpiration}
 
-Transpiration occurs because plants must open their stomata (approximately 10 $\mu$m-scale pores on the surface of leaves) in order to take in carbon dioxide for photosynthesis, and in the process, water from the wet interior of the leaf evaporates and exits the stomata.  Thus plants (especially those with the C3 carbon fixation pathway) must continually balance the gain of carbon dioxide against the loss of water, particularly in water-limited ecosystems.  Plants actively control the openness of their stomata in order to optimize this balance.  The rate of water loss depends on the stomatal conductivity ($g_s$, a measure of openness) and on the difference in vapor pressure between the interior of the leaf and the outside air (measured by vapor pressure deficit, or VPD):
+Transpiration occurs because plants must open their stomata (approximately 10 $\mu$m-scale pores on the surface of leaves) in order to take in carbon dioxide for photosynthesis, and in the process, water from the wet interior of the leaf evaporates and exits the stomata.  Thus plants (especially those with the C3 carbon fixation pathway) must continually balance the gain of carbon dioxide against the loss of water, particularly in water-limited ecosystems.  Plants actively control the openness of their stomata in order to optimize this balance.  The rate of water loss (E, L/s) depends on the stomatal conductivity ($g_s$, a measure of openness, L/s/kPa) and on the difference in vapor pressure between the interior of the leaf and the outside air (measured by vapor pressure deficit, or $VPD$, kPa):
 
 \begin{equation}
-E = g_s * VPD
+E = g_s * VPD ,
 \end{equation}
+where
+\begin{equation}
+VPD = e_{sat}(T_{air}) - e_{air}
+\end{equation}
+and $e_{sat}(T_{air})$ is the saturation vapor pressure at air temperature (kPa) and $e_{air}$ is actual vapor pressure of the air (kPa).
 
-The stomatal conductivity responds on short timescales (seconds to minutes) to environmental conditions, including light, VPD, carbon dioxide concentration, and root-zone moisture availability.
+The stomatal conductivity responds on short timescales (seconds to minutes) to environmental conditions, including light, $VPD$, carbon dioxide concentration, and root-zone moisture availability.
 
-Different plant species employ different strategies to balance carbon gain against water loss.  Rapid or excessive water loss can damage plant tissue by causing xylem cavitation, or gas intrusion into the plant's hydraulic system.  However, extended periods of closed stomata can deplete a plant's sugar reserves if the rate of respiration exceeds the rate of photosynthesis.  Some plants adopt a hydraulically cautious strategy, closing stomata quickly as atmospheric evaporative demand grows and as root-zone water is depleted, with the advantage of maintaining a larger ``hydraulic safety margin,'' or difference between actual xylem water potential and the xylem water potential at which cavitation occurs [\cite{choat2012global}]. One significant downside of this strategy, of course, is the reduced opportunity to take in carbon dioxide for photosynthesis.  At the other end of the spectrum, other species adopt a hydraulically riskier strategy, keeping their stomata more open even as atmospheric evaporative demand increases and the root-zone dries.  With this strategy, plants can take up more carbon dioxide but maintain a lower hydraulic safety margin during times of water stress.
+Different plant species employ different strategies to balance carbon gain against water loss.  Rapid or excessive water loss can damage plant tissue by causing xylem cavitation, or gas intrusion into the plant's hydraulic system.  However, extended periods of closed stomata can deplete a plant's sugar reserves if the rate of metabolizing those sugars (respiration) exceeds the rate of photosynthesis.  Some plants adopt a hydraulically cautious strategy, closing stomata quickly as atmospheric evaporative demand grows and as root-zone water is depleted, with the advantage of maintaining a larger ``hydraulic safety margin,'' or difference between actual xylem water potential and the xylem water potential at which cavitation occurs [\cite{choat2012global}]. One significant downside of this strategy, of course, is the reduced opportunity to take in carbon dioxide for photosynthesis.  At the other end of the spectrum, some species adopt a hydraulically riskier strategy, keeping their stomata more open even as atmospheric evaporative demand increases and the root-zone dries.  With this strategy, plants can fix more carbon dioxide but maintain a lower hydraulic safety margin during times of water stress.
 
-In periods of moderate water stress such as the California summer dry season, the hydraulically cautious strategy translates to lower transpiration than the hydraulically risky strategy, as the cautious species close their stomata more quickly in response to limited water availability and high atmospheric evaporative demand.  Among the species studied in this dissertation, like in \cite{choat2012global}, the hydraulically cautious species is a gymnosperm and the hydraulically riskier species are angiosperms.  However, differences among the angiosperms were apparent; in particular, one angiosperm broadleaf evergreen tree species, Pacific madrone, was markedly less sensitive to root-zone water limitation than the other angiosperm broadleaf evergreen species.  These differences are estimated to be strong enough to influence regional-scale atmospheric boundary layer temperature, depth, and humidity.  These results suggest that species-specific understanding of stomatal response will give greater accuracy in evapotranspiration estimates, but this must be balanced against the difficulty of quantifying many more vegetation subgroups' stomatal response parameters.
-
-\subsection{Influence of evapotranspiration on the atmosphere}
-- During the daytime, sensible heat drives buoyant convection from the surface, deepening the well-mixed atmospheric boundary layer (the lower 1-2 km of the daytime atmosphere that interacts rapidly with the surface).
-- Greater evapotranspiration reduces the land surface temperature and the sensible heat flux.
-- With a larger flux of water vapor and a smaller flux of sensible heat, the atmospheric boundary layer tends to be shallower, cooler, and moister, with the exact outcome depending on background conditions like radiation, clouds, and free troposphere stability and humidity.
-- Horizontal differences in the partitioning of turbulent heat fluxes can drive local- to regional-scale circulations.  In areas with more sensible heat flux, the boundary layer tends to warm, reducing the density of the air and generating a zone of low pressure.  The difference in pressure relative to adjacent regions with lower sensible heat flux (and thus cooler temperature, higher low-level density and higher pressure) can drive wind circulations.
+In periods of moderate water stress such as the California summer dry season, the hydraulically cautious strategy translates to lower transpiration than the hydraulically risky strategy, as the cautious species close their stomata more quickly in response to limited water availability and high atmospheric evaporative demand.  Among the species studied in this dissertation, as in \cite{choat2012global}, the hydraulically cautious species is a gymnosperm and the hydraulically riskier species are angiosperms.  However, differences among the angiosperms were also apparent; in particular, one angiosperm broadleaf evergreen tree species, Pacific madrone, was markedly less sensitive to root-zone water limitation than the other angiosperm broadleaf evergreen species.  These differences are estimated to be strong enough to influence regional-scale atmospheric boundary layer temperature, depth, and humidity.  These results suggest that species-specific understanding of stomatal response will give greater accuracy in evapotranspiration estimates, but this must be balanced against the difficulty of quantifying many more vegetation subgroups' stomatal response parameters.
 
 \section{Methodological contributions}
 
-This thesis contributes methodological innovations to the study of forest transpiration.  These innovations include new applications of statistical techniques to a high-frequency and long-term sap flow dataset, scaling of sap flow measurements to regional transpiration estimates using a publicly-available forest inventory dataset, comparing this sap-flow-derived regional transpiration estimate with satellite-based estimates, and using atmospheric models of varying complexity to quantify the atmospheric response to species differences in transpiration.
+This thesis contributes methodological innovations to the study of forest transpiration.  These innovations include new applications of statistical techniques to a high-frequency and long-term sap flow dataset, scaling of sap flow measurements to regional transpiration estimates using a publicly-available forest inventory dataset, comparing this sap-flow-derived regional transpiration estimate with satellite-based estimates, using atmospheric models of varying complexity to quantify the atmospheric response to species differences in transpiration, and using an atmospheric model to systematically test the effect of soil moisture uncertainty on wind energy predictions.
 
-This diversity of methods is needed because of the difficulty of relating measurements of evapotranspiration at local and regional scales.  Techniques such as leaf chambers and sap flow instrumentation can measure transpiration at the individual leaf- or tree-level; however, they are labor-intensive and difficult to deploy beyond the scale of a single plot of land.  Evapotranspiration can be estimated at the 1-10 km$^2$ scale with eddy covariance techniques or at the 1 km$^2$ to continental scale with satellite observation-model hybrids.  Each of these methods has associated uncertainties, and moreover, they estimate the aggregated evapotranspiration, meaning that observed dynamics cannot directly be attributed to any one species or subgroup of plants.  In this thesis, I link individual tree-level observations with the regional  scale by using PCA and MCMC to quantify dominant and consistent patterns that might hold at larger scales.  I build a bottom-up estimate of regional transpiration using these dominant patterns together with a regional inventory of tree sizes and abundances.  This bottom-up inventory suggests that satellite-based, top-down estimates overestimate dry season transpiration in the Northern California Coast Range, possible because they do not reduce estimated transpiration enough in response to dry soils.
+This diversity of methods is needed because of the difficulty of relating measurements of evapotranspiration at local and regional scales.  Techniques such as leaf chambers and sap flow instrumentation can measure transpiration at the individual leaf- or tree-level; however, they are labor-intensive and difficult to deploy beyond the scale of a single plot of land.  Evapotranspiration can be estimated at the 1-10 km$^2$ scale with eddy covariance techniques or at the 1-km$^2$-to-continental scale with satellite observation-model hybrids.  Each of these methods has associated uncertainties, and moreover, they estimate the aggregated evapotranspiration, meaning that observed dynamics cannot directly be attributed to any one species or subgroup of plants.  In this thesis, I link individual tree-level observations with the regional  scale by using principal component analysis (PCA) and Markov chain Monte Carlo (MCMC) parameter estimation to quantify dominant and consistent patterns that might hold at larger scales.  I build a bottom-up estimate of regional transpiration using these dominant patterns together with a regional inventory of tree sizes and abundances.  This bottom-up inventory suggests that satellite-based, top-down estimates overestimate dry season transpiration in the Northern California Coast Range, possible because they do not reduce estimated transpiration enough in response to dry soils.
 
 Another methodological contribution of this dissertation is the integration of sap flow measurements with atmospheric models to estimate the atmospheric boundary layer response to species differences in transpiration.  I use two atmospheric models of very different degrees of complexity to independently confirm the effects on the atmospheric boundary layer.  The first model, a simple one-dimensional slab model of the atmospheric boundary layer, represents boundary layer growth by convective entrainment of free tropospheric air; it neglects complicating processes such as clouds, terrain, and advection and any other lateral heterogeneity, and its representation of convective turbulence is very simplistic.  The second model, a three-dimensional regional atmospheric model, represents many more processes (e.g. radiation, clouds, turbulence) and allows for lateral variation and advection.  Testing the atmospheric boundary layer response to species difference in transpiration in these two levels of model complexity lends credence to the results.
 
 Chapter \ref{c.wind} of this dissertation applies the modeling of evapotranspiration-atmosphere interactions to a new use: wind energy forecasting.  I show that soil moisture errors of a magnitude known to exist in reanalysis datasets can influence wind energy forecasts at one California wind farm in an operationally significant way.  The study's systematic perturbation of soil moisture in an atmospheric model, and its mechanistic analysis of wind response, establish a prototype for similar studies at other wind farms.  Such studies could support measurement campaigns and data assimilation to improve wind energy forecast accuracy.
 
-\section{Future work}
+\section{Further questions}
 
-This work raises new questions about the effects of species differences in water use strategies on watersheds and the atmosphere.  First, where do Douglas firs and Pacific madrones (two species with very different water use patterns) access subsurface water, and do they tap into distinct water stores?  There is some evidence that Pacific madrones, which transpire maximally in the summer dry season, may have access to both deeper water, via deeper roots than Douglas firs, and more tightly bound water, by pulling harder, i.e. reaching lower water potentials (Chapter \ref{c.sapflow} Discussion).  Understanding species differences in subsurface water access is essential for a mechanistic understanding of water movement through the subsurface-vegetation-atmosphere system.  Such a mechanistic understanding will enable informed projections of the effect of changes in species abundance on streamflow (to what extent does each species tap into reservoirs that contribute to summertime baseflow?) and the resilience of each species to longer and more intense future droughts (what will happen to each species's water store in such droughts?  Is deeper water more protected from depletion during drought, and does it thus confer resilience on deep-rooted species?)
+This work raises new questions about the effects of species differences in water use strategies on watersheds and the atmosphere.  First, where do Douglas firs and Pacific madrones (two species with very different water use patterns) access subsurface water, and do they tap into distinct water stores?  There is some evidence that Pacific madrones, which transpire maximally in the summer dry season, may have access to both deeper water, via deeper roots than Douglas firs, and more tightly bound water, by reaching lower tissue water potentials (Chapter \ref{c.sapflow} Discussion).  Understanding species differences in subsurface water access is essential for a mechanistic understanding of water movement through the subsurface-vegetation-atmosphere system.  Such a mechanistic understanding will enable informed projections of the effect of changes in species abundance on streamflow (to what extent does each species tap into reservoirs that contribute to summertime baseflow?) and the resilience of each species to longer and more intense future droughts (what will happen to each species's water store in such droughts?  Is deeper water more protected from depletion during drought, and does it thus confer resilience on deep-rooted species?)
 
-Connected to ongoing research about tree mortality in response to drought.  Causes of tree mortality, and relative importance of carbon starvation vs. hydraulic failure, are still debated.  Future work should investigate how the different hydraulic strategies employed by Douglas firs and Pacific madrones make them more or less susceptible to drought-induced mortality.  How will species distribution in the Northern California Coast Range respond to a warmer climate (will there be more droughts? if so, how will each species cope with the particular types of those droughts, length and intensity), interacting with human-influenced fire regime and other management practices?
+The different hydraulic strategies outlined here also raise questions about these tree species's resilience or mortality in response to drought.  The causes of tree mortality, and the relative importance of carbon starvation vs. hydraulic failure, are still debated [\cite{sala2010physiological}].  Future work should investigate how the different hydraulic strategies employed by Douglas firs and Pacific madrones make them more or less susceptible to drought-induced mortality.  How will the species distribution in the Northern California Coast Range respond to a warmer climate (will there be more droughts? Will they be longer or more intense or both?  How does each species respond to an unusually long drought?  To an unusually intense drought?)
 
-A major challenge in evapotranspiration research is heterogeneity and scaling up from local-scale measurements.  Generalizing across regions, aspects, slopes, geologies - methodological difficulty of sampling enough places, and enough species, what common behaviors can we aggregate at classifications broader that the species level.  
+A major challenge in evapotranspiration research is heterogeneity and scaling up from local-scale measurements.  In this thesis, I generalize very local measurements of tree water use across aspects, slopes, geologies, and elevations.  More work is needed in the evergreen forests of the Northern California Coast Range to sample tree water use in a wider range of these conditions, and among other common tree species not sampled here.  Such observations are necessary in order for generalizable patterns to emerge from the specificity and heterogeneity of each individual field site.
