--- a/ch1-sapflow/intro/intro.tex
+++ b/ch1-sapflow/intro/intro.tex
@@ -1,5 +1,5 @@
 \section{Introduction}
-In forested regions, the response of trees to solar irradiance, temperature, humidity, and subsurface moisture influences the timing of water flux to the atmosphere, of energy partitioning at the land surface, and of fixation of carbon [\cite{bonan}]. In a Mediterranean climate, the season of high water supply is offset from the season of high atmospheric evaporative demand and high solar irradiance [\cite{baldocchi2007limits}]. For forested landscapes in these climates, such as much of the Northern California Coast Range, the dominant tree species are evergreen [XXXX\textit{Woudenberg et al.}, 2010], yet their transpiration is not constant through the year [e.g. \cite{vinukollu2010global}].  In this study, we demonstrate differences in transpiration seasonality between needleleaf and broadleaf evergreen trees, and we show that these differences are due to different responses to surface soil moisture and atmospheric evaporative demand.
+In forested regions, the response of trees to solar irradiance, temperature, humidity, and subsurface moisture influences the timing of water flux to the atmosphere, of energy partitioning at the land surface, and of fixation of carbon [\cite{bonan}]. In a Mediterranean climate, the season of high water supply is offset from the season of high atmospheric evaporative demand and high solar irradiance [\cite{baldocchi2007limits}]. For forested landscapes in these climates, such as much of the Northern California Coast Range, the dominant tree species are evergreen [\cite{woudenberg2010forest}], yet their transpiration is not constant through the year [e.g. \cite{vinukollu2010global}].  In this study, we demonstrate differences in transpiration seasonality between needleleaf and broadleaf evergreen trees, and we show that these differences are due to different responses to surface soil moisture and atmospheric evaporative demand.
 
 Water supply limitation can reduce evapotranspiration (ET) from the whole-plant scale (specific references are discussed below) up to the regional scale [\cite{jung2010recent}].  The root-zone moisture value at which different species become water-stressed can determine which species thrive in different hydrologic regimes [\cite{rodriguez2001intensive}; \cite{kumagai2012strategies}].  Some species, such as Douglas-fir [\cite{granier1987evaluation}; \cite{tan1976factors}; \cite{black1979evapotranspiration}; \cite{humphreys2003annual}; \cite{jassal2009evapotranspiration}], juniper [\cite{mcdowell2008mechanisms}], lodgepole pine, limber pine, and subalpine fir [\cite{pataki2000sap}], Aleppo pine [\cite{baquedano2006comparative}; \cite{chirino2011daily}], and many species in the \textit{Pinaceae} family [\cite{martinez2004hydraulic}] reduce transpiration in response to relatively moderate soil water deficits.  This drought response strategy may protect the trees from hydraulic failure but reduce carbon uptake [\cite{mcdowell2008mechanisms}].  In contrast, some species maintain high rates of transpiration even as the subsurface dries (e.g. pi\~non [\cite{mcdowell2008mechanisms}], Kermes oak and Holm oak [\cite{baquedano2006comparative}; \cite{chirino2011daily}; \cite{david2007water}], and a eucalyptus species (\textit{E. gomphocephala}) [\cite{franks2007anisohydric}]); this drought response strategy may expose the trees to hydraulic failure if the drought is severe enough but allow them to continue fixing carbon [\cite{mcdowell2008mechanisms}]. 
 
