--- a/ch1-sapflow/methods/methods.tex
+++ b/ch1-sapflow/methods/methods.tex
@@ -12,7 +12,7 @@ The study site (39.729$^{\circ}$N, 123.644$^{\circ}$W) is located in the Univers
 	
 The field site, known as ``Rivendell'', is a small (4000 m$^2$), north-facing hillslope that drains to Elder Creek, a tributary of the South Fork Eel River (Figure \ref{fig:sapflow_map}).  Rivendell is the subject of an interdisciplinary collaborative project to study the lifecycle of water through a steep hillslope, and over 700 separate instruments have collected over 100 million data points between 2007 and May 2012.  The site has an average slope of approximately 32 degrees.  The subsurface structure consists of a thin soil mantle over a layer of highly fractured sedimentary rock, underlain by unweathered bedrock with very low permeability.  The fractured, weathered bedrock zone transitions with depth from relatively soil-like granular material to low-permeability bedrock bounded by fractures.  Both the soil mantle and the weathered rock layer are thicker at the hill crest (60 cm soil and 20 m weathered rock) and thinner at the base of the hill (0-30 cm soil and 5 m weathered rock) [\cite{rempe2010}].
 
-The old-growth forest in the ACRR consists primarily of Douglas-fir (\textit{Pseudotsuga menziesii}), coast redwood (\textit{Sequoia sempervirens}), interior live oak (\textit{Quercus wislizeni}), tanoak (\textit{Notholithocarpus densiflorus}), Pacific madrone (\textit{Arbutus menziesii}), and California bay (\textit{Umbellularia californica}).  In the Eel River watershed, Douglas-fir constitutes approximately 40\% of tree basal area [XXXX \textit{Woudenberg et al.}, 2010] and is commonly associated with Pacific madrone, tanoak, live oak, and other species in the Pacific Douglas-fir alliance in coastal northern California [XXXX r\textit{USDA}, 2005].  At the study site, Douglas-firs form the overstorey, with heights up to 55-60 m, while live oaks, bays, Pacific madrones, and tanoaks form the lower canopy, reaching heights of approximately 20 m.  Below the lower canopy, there are smaller (5-10 m) trees of all species. There is no dense ground cover. Douglas-firs, live oaks, tanoaks, and bays are evenly distributed across the hillslope, while Pacific madrones occur more frequently upslope.  Douglas-fir is a needleleaf tree, while live oaks, tanoaks, Pacific madrones, and bays are broadleaf trees, but all of these species are evergreen. The rooting depths of trees at this site have not been determined, but during drilling of wells at the site, roots of unidentified species were observed most densely in the top several meters and with decreasing density to a depth of 15.2 m.
+The old-growth forest in the ACRR consists primarily of Douglas-fir (\textit{Pseudotsuga menziesii}), coast redwood (\textit{Sequoia sempervirens}), interior live oak (\textit{Quercus wislizeni}), tanoak (\textit{Notholithocarpus densiflorus}), Pacific madrone (\textit{Arbutus menziesii}), and California bay (\textit{Umbellularia californica}).  In the Eel River watershed, Douglas-fir constitutes approximately 40\% of tree basal area [\cite{woudenberg2010forest}] and is commonly associated with Pacific madrone, tanoak, live oak, and other species in the Pacific Douglas-fir alliance in coastal northern California [\cite{usda}].  At the study site, Douglas-firs form the overstorey, with heights up to 55-60 m, while live oaks, bays, Pacific madrones, and tanoaks form the lower canopy, reaching heights of approximately 20 m.  Below the lower canopy, there are smaller (5-10 m) trees of all species. There is no dense ground cover. Douglas-firs, live oaks, tanoaks, and bays are evenly distributed across the hillslope, while Pacific madrones occur more frequently upslope.  Douglas-fir is a needleleaf tree, while live oaks, tanoaks, Pacific madrones, and bays are broadleaf trees, but all of these species are evergreen. The rooting depths of trees at this site have not been determined, but during drilling of wells at the site, roots of unidentified species were observed most densely in the top several meters and with decreasing density to a depth of 15.2 m.
 
 Climatic variables, including air temperature (\textit{T}, $^{\circ}$C), relative humidity (\textit{RH}, \%), solar radiation (\textit{I}, W/m$^2$), and precipitation (\textit{P}, mm), are measured at five weather stations at the site (Figure \ref{fig:sapflow_map}).  One weather station (TB) is located approximately 30 m above ground in the tree canopy, three weather stations (R1, R2, and R3) are located 1 m above the ground in an along-slope transect, and one weather station (AM) is located in an open meadow with full clearance, across the stream from the site.  The weather stations on the site (TB, R1, R2, and R3) are used here to characterize the \textit{VPD} at the site (\textit{T} and \textit{RH} from Vaisala HMP45C-L sensors at R1, R2, R3, and from a Vaisala WXT510 sensor at TB; Vaisala, Helsinki, Finland), while the meadow weather station (AM) is used for unobstructed \textit{I} and gross \textit{P} (Li-Cor LI200X-L pyranometer, Li-Cor, Lincoln, NE, USA; and Campbell Scientific TE525 tipping bucket rain gauge, Campbell Scientific, Logan, UT, USA).  All meteorological and soil moisture measurements were recorded with CR1000 dataloggers (Campbell Scientific) at intervals of 15 minutes until 2010 and 5 minutes beginning in 2010, and transmitted wirelessly and automatically to an online server; the entire system is powered only by solar cells.
 
@@ -67,12 +67,14 @@ E = g_c \cdot VPD.
 Following the Jarvis model, canopy conductance ($g_c$) is modeled as a maximum conductance ($g_{cmax}$, liters/day/kPa), reduced by empirical multiplicative functions, ranging from 0 to 1, of important environmental modifiers: \textit{VPD}, $\theta$, and $I$ [\cite{jarvis1976interpretation}; \cite{oren1999survey}; \cite{waring2011generalizing}].
 
 \begin{equation}  % equation 3
+\label{eqn:sapflow_jarvis_simple}
 g_c = g_{cmax} \cdot f_{VPD}(VPD) \cdot f_{\theta}(\theta) \cdot f_I(I).
 \end{equation}
 
 The functions of environmental modifiers are analytical parameterizations based on previous empirical observations.  For the atmospheric evaporative demand function, $f(VPD)$, we use an asymptotic function [\cite{lohammar1980fast}; \cite{lindroth1986numerical}; \cite{dang1997regulation}],
 
 \begin{equation}  % equation 4
+\label{eqn:sapflow_fVPD}
 f_{VPD}(VPD) = \frac{1}{1+VPD/D_o},
 \end{equation}
 where $D_o$ (kPa) describes the sensitivity of $g_c$ to \textit{VPD}.
@@ -80,6 +82,7 @@ where $D_o$ (kPa) describes the sensitivity of $g_c$ to \textit{VPD}.
 The water supply function, $f(\theta)$, is modeled as a sigmoid function, chosen because it is a continuous function that represents the threshold limitation of transpiration by $\theta$ in very dry soils; this is a continuous functional form that approximates the piecewise-linear Feddes model [\cite{feddes}; \cite{chen2008observations}]:
 
 \begin{equation}  % equation 5
+\label{eqn:sapflow_soilmois}
 f_{\theta}(\theta) = \frac{1}{1+\exp(-\beta(\theta-\theta_o))},
 \end{equation}
 where $\beta$ (unitless) measures the rate of decrease of transpiration at low $\theta$, and $\theta_o$ (unitless) is the value of $\theta$ at which the transpiration decline is centered.  These parameters can be related to the more standard stress point and wilting point of the Feddes model by estimating the $\theta$ at which the sigmoid function begins to decline (the stress point) and the $\theta$ at which the sigmoid function is approximately zero (the wilting point.)
@@ -104,7 +107,7 @@ We estimate these five parameters for each sensor using a Markov chain Monte Car
 
 \subsection{Estimates of regional transpiration}
 \label{sec:sapflow_regmeth}
-We use the species-averaged timeseries of normalized sap velocity, along with Forest Inventory and Analysis (FIA) [XXXX \textit{Woudenberg et al.}, 2010] observations of tree size and species distributions in the Eel River watershed, to estimate the contribution of each species to regional transpiration.  We estimate regional transpiration, rather than hillslope transpiration at our particular site, because regional distributions of trees by species and diameter are available from the FIA inventory, but no species-diameter inventory has been conducted at our particular site.  This scale jump requires simplifications and assumptions (described below), and as such, our calculations are a rough best estimate and an attempt to bound the range of possible forest transpiration in this region from a bottom-up perspective.  
+We use the species-averaged timeseries of normalized sap velocity, along with Forest Inventory and Analysis (FIA) [\cite{woudenberg2010forest}] observations of tree size and species distributions in the Eel River watershed, to estimate the contribution of each species to regional transpiration.  We estimate regional transpiration, rather than hillslope transpiration at our particular site, because regional distributions of trees by species and diameter are available from the FIA inventory, but no species-diameter inventory has been conducted at our particular site.  This scale jump requires simplifications and assumptions (described below), and as such, our calculations are a rough best estimate and an attempt to bound the range of possible forest transpiration in this region from a bottom-up perspective.  
 
 Transpiration was estimated using Equation \ref{eqn:sf1}, with $v_n$ calculated using the species-averaged timeseries Jarvis parameters, and $\alpha$ disaggregated as follows.  Transpiration for a single tree ($E_{tree}$, cm m$^2$/hr) is
 
@@ -154,7 +157,7 @@ Sap velocity was approximated as a linear function of radial position in the sap
 
 Because the radial profile of sap velocity is not well constrained with our measurements, we test three possible velocity profiles, with $v(r) = v_{max} \, v_n \, f_{prof}(r)$: (1) constant velocity across the sapwood ($f_{prof}(r) = 1$); (2) velocity decreasing linearly from $v_{max} \, v_n$ at the outer edge of the sapwood to $0.5 \, v_{max} \, v_n$ at the inner edge of the sapwood ($f_{prof}(r) = 1+\tfrac{0.5}{w_{sap}}(r-r_{outer})$ ); and (3) velocity decreasing linearly from $v_{max} \, v_n$ at the outer edge of the sapwood to 0 at the inner edge of the sapwood ($f_{prof}(r) = 1+\tfrac{1}{w_{sap}}(r-r_{outer})$ ).
 
-Transpiration is scaled from a single tree to the regional scale using distributions of tree species and sizes measured in the Eel River watershed by the FIA program, binned by diameter in 5 cm bins [\textit{Woudenberg et al.}, 2010] (locations of FIA plots are intentionally ``fuzzed and swapped'' for privacy reasons, but the provided coordinates are ``similar'' to the true coordinates with an unspecified offset).  The FIA surveyed 321 forested plots within the Eel Watershed.  Figure \ref{fig:sapflow_abundances} shows $N_{i,sp}$, the number of trees per km$^2$ in each diameter bin ($i$) for major species categories in the watershed ($sp$), averaged over the 321 FIA plots.
+Transpiration is scaled from a single tree to the regional scale using distributions of tree species and sizes measured in the Eel River watershed by the FIA program, binned by diameter in 5 cm bins [\cite{woudenberg2010forest}] (locations of FIA plots are intentionally ``fuzzed and swapped'' for privacy reasons, but the provided coordinates are ``similar'' to the true coordinates with an unspecified offset).  The FIA surveyed 321 forested plots within the Eel Watershed.  Figure \ref{fig:sapflow_abundances} shows $N_{i,sp}$, the number of trees per km$^2$ in each diameter bin ($i$) for major species categories in the watershed ($sp$), averaged over the 321 FIA plots.
 
 \begin{figure}[here]
 \includegraphics[width=0.9\textwidth]{ch1-sapflow/figures/Figure02.pdf}
@@ -170,5 +173,5 @@ T_{sp} &= \sum_{i} N_{i,sp} \, E_{tree,i,sp} \nonumber \\
 \end{align}
 and subsequently applying a unit conversion factor of $(10 \tfrac{mm}{cm}) (24 \tfrac{hr}{day}) (10^{-6} \tfrac{km^2}{m^2})$.  Total regional transpiration is estimated by summing transpiration estimated for all species, using the averaged time series of measured species to represent unmeasured but similar species.  All conifers, including redwoods, are assigned the Douglas-fir time series; all oaks, both evergreen and deciduous, are assigned the interior live oak time series; and all other unmeasured broadleaf trees are assigned the Pacific madrone time series, in order to give an upper-bound estimate on dry season transpiration.  Thus, we effectively bin species into categories of needleleaf evergreen and broadleaf evergreen; these assumptions are necessary because redwoods and major pine species were not measured due to their scarcity at our site.  In addition, we calculate regional transpiration in two extreme hypothetical cases, using the FIA total tree size distribution (black line in Figure \ref{fig:sapflow_abundances}): one case in which all trees are assigned the Douglas-fir time series, and another case in which all trees are assigned the Pacific madrone time series. 
 
-The sap-flow-based regional transpiration estimates are compared with remotely-sensed MODIS-derived estimates of ET [XXXX \textit{Mu et al.}, 2007.]  The MODIS algorithm uses remotely-sensed LAI and modeled stomatal response based on an assigned plant functional type (which for this region is evergreen needleleaf forest), combined with meteorology from atmospheric reanalysis, to estimate stomatal conductance and ET.  No soil moisture or subsurface information is explicitly included.  Two spatial scales of the MODIS-derived estimate are presented: the 1 km x 1 km pixel nearest to Rivendell (pixel centered about 450 m east of Rivendell), and the average for all pixels in the Eel River watershed.  Our goals in comparing our estimated to the MODIS-derived estimate are a) to confirm that our estimates are the right order of magnitude, and b) to compare the seasonal timing of transpiration between the methods.
+The sap-flow-based regional transpiration estimates are compared with remotely-sensed MODIS-derived estimates of ET [\cite{mu2007development}].  The MODIS algorithm uses remotely-sensed LAI and modeled stomatal response based on an assigned plant functional type (which for this region is evergreen needleleaf forest), combined with meteorology from atmospheric reanalysis, to estimate stomatal conductance and ET.  No soil moisture or subsurface information is explicitly included.  Two spatial scales of the MODIS-derived estimate are presented: the 1 km x 1 km pixel nearest to Rivendell (pixel centered about 450 m east of Rivendell), and the average for all pixels in the Eel River watershed.  Our goals in comparing our estimated to the MODIS-derived estimate are a) to confirm that our estimates are the right order of magnitude, and b) to compare the seasonal timing of transpiration between the methods.
 
