--- a/thesis.bib
+++ b/thesis.bib
@@ -1,3 +1,71 @@
+%%%%%%%% INTRO %%%%%%%%
+
+@book{dirmeyer2005second,
+  	title={The second Global Soil Wetness Project (GSWP-2): Multi-model analysis and implications for our perception of the land surface},
+  	author={Dirmeyer, Paul A and Gao, Xiang and Zhao, Mei and Guo, Zhichang and Oki, Taikan and Hanasaki, Naota and others},
+  	volume={185},
+  	year={2005},
+  	publisher={Center for Ocean-Land-Atmosphere Studies}}
+
+@article{ISI:A1996VD58700003,
+	Affiliation = {{Eltahir, EAB (Reprint Author), MIT,DEPT CIVIL \& ENVIRONM ENGN,RALPH M PARSONS LAB,ROOM 1-290,CAMBRIDGE,MA 02139.}},
+	Author = {Eltahir, EAB and Bras, RL},
+	ssn = {{8755-1209}},
+	Journal = {{REVIEWS OF GEOPHYSICS}},
+	Journal-Iso = {{Rev. Geophys.}},
+	Keywords = {Precipitation; Recycling; Water cycle},
+	Keywords-Plus = {{AMAZONIAN DEFORESTATION; TROPICAL ATMOSPHERE; HYDROLOGICAL CYCLE; REGIONAL CLIMATE; MECHANISM; MOISTURE; IMPACT; BRANCH}},
+	Language = {{English}},
+	Month = {{AUG}},
+	Number = {{3}},
+	Number-Of-Cited-References = {{53}},
+	Pages = {{367-378}},
+	Publisher = {{AMER GEOPHYSICAL UNION}},
+	Subject-Category = {{Geochemistry \& Geophysics}},
+	Title = {{Precipitation recycling}},
+	Type = {{Review}},
+	Unique-Id = {{ISI:A1996VD58700003}},
+	Volume = {{34}},
+	Year = {{1996}}}
+
+@article{jasechko2013terrestrial,
+	Author = {Jasechko, Scott and Sharp, Zachary D and Gibson, John J and Birks, S Jean and Yi, Yi and Fawcett, Peter J},
+	Journal = {Nature},
+	Number = {7445},
+	Pages = {347--350},
+	Publisher = {Nature Publishing Group},
+	Title = {Terrestrial water fluxes dominated by transpiration},
+	Volume = {496},
+	Year = {2013}}
+
+@article{sala2010physiological,
+  title={Physiological mechanisms of drought-induced tree mortality are far from being resolved},
+  author={Sala, Anna and Piper, Frida and Hoch, G{\"u}nter},
+  journal={New Phytologist},
+  volume={186},
+  number={2},
+  pages={274--281},
+  year={2010},
+  publisher={Wiley Online Library}}
+
+@article{trenberth2007,
+	Author = {Trenberth, K.E. and Smith, L. and Qian, T. and Dai, A. and Fasullo, J.},
+	Journal = {Journal of Hydrometeorology},
+	Pages = {758-769},
+	Title = {Estimates of the global water budget and its annual cycle using observational and model data},
+	Volume = {8},
+	Year = {2007}}
+
+@article{wilson2001comparison,
+	Author = {Wilson, Kell B and Hanson, Paul J and Mulholland, Patrick J and Baldocchi, Dennis D and Wullschleger, Stan D},
+	Journal = {Agricultural and Forest Meteorology},
+	Number = {2},
+	Pages = {153--168},
+	Publisher = {Elsevier},
+	Title = {A comparison of methods for determining forest evapotranspiration and its components: sap-flow, soil water budget, eddy covariance and catchment water balance},
+	Volume = {106},
+	Year = {2001}}
+
 %%%%%%%% SAP FLOW CHAPTER %%%%%%%%
 @article{ackerly2004functional,
 	Author = {Ackerly, D.},
@@ -561,8 +629,13 @@
 	Volume = {16},
 	Year = {1980}}
 
-%\bibitem[{\textit{USDA}(2005)}]{USDA}
-%USDA (2005), CALVEG zones and alliances: vegetation descriptions.  \url{http://www.fs.usda.gov/Internet/FSE_DOCUMENTS/fsbdev3_046448.pdf}
+@techreport{usda,
+	author={USDA},
+	title={{CALVEG} zones and alliances: vegetation descriptions},
+	institution={USDA},
+	year={2005},
+	address={\url{http://www.fs.usda.gov/Internet/FSE_DOCUMENTS/fsbdev3_046448.pdf}}
+	}
 
 @article{vinukollu2010global,
 	Author = {Vinukollu, R.K. and Wood, E.F. and Ferguson, C.R. and Fisher, J.B.},
@@ -628,8 +701,12 @@
 	Volume = {38},
 	Year = {2002}}
 
-%\bibitem[{\textit{Woudenberg}(2010)}]{Woudenberg}
-%Woudenberg, S.~W., B.~L. Conkling, B.~M. O'Connell, E.~B. LaPoint, J.~A. Turner, and K.~L. Waddell (2010), The Forest Inventory and Analysis Database: Database description and users manual version 4.0 for Phase 2, Gen. Tech. Rep. RMRS-GTR- 245. Fort Collins, CO: U.S. Department of Agriculture, Forest Service, Rocky Mountain Research Station. 336 p.
+@techreport{woudenberg2010forest,
+  title={The Forest Inventory and Analysis Database: Database description and users manual version 4.0 for Phase 2},
+  author={Woudenberg, Sharon W and Conkling, Barbara L and OÕConnell, Barbara M and LaPoint, Elizabeth B and Turner, Jeffery A and Waddell, Karen L and others},
+  year={2010},
+  institution={US Department of Agriculture, Forest Service, Rocky Mountain Research Station}
+}
 
 @article{wullschleger2001transpiration,
 	Author = {Wullschleger, Stan D and Hanson, PJ and Todd, DE},
@@ -703,6 +780,13 @@
 	Title = {Soil moisture-atmosphere interactions during the 2003 European summer heat wave},
 	Volume = {20},
 	Year = {2007}}
+
+@book{garratt1994atmospheric,
+  title={The atmospheric boundary layer},
+  author={Garratt, John Roy},
+  year={1994},
+  publisher={Cambridge university press}
+}
 
 @article{hirschi2010observational,
 	Author = {Hirschi, Martin and Seneviratne, Sonia I and Alexandrov, Vesselin and Boberg, Fredrik and Boroneant, Constanta and Christensen, Ole B and Formayer, Herbert and Orlowsky, Boris and Stepanek, Petr},
@@ -791,6 +875,16 @@
 	Volume = {10},
 	Year = {2009}}
 
+@article{stackhouse2011nasa,
+  title={The NASA/GEWEX surface radiation budget release 3.0: 24.5-year dataset},
+  author={Stackhouse Jr, PW and Gupta, SK and Cox, SJ and Zhang, T and Mikovitz, J Colleen and Hinkelman, LM},
+  journal={GEWEX News},
+  volume={21},
+  number={1},
+  pages={10--12},
+  year={2011}
+}
+
 @article{tennekes1981basic,
 	Author = {Tennekes, H. and Driedonks, AGM},
 	Journal = {Boundary-Layer Meteorology},
@@ -801,6 +895,26 @@
 	Volume = {20},
 	Year = {1981}}
 
+@article{xie2012evaluation,
+  title={Evaluation of nonlocal and local planetary boundary layer schemes in the WRF model},
+  author={Xie, Bo and Fung, Jimmy CH and Chan, Allen and Lau, Alexis},
+  journal={Journal of Geophysical Research: Atmospheres (1984--2012)},
+  volume={117},
+  number={D12},
+  year={2012},
+  publisher={Wiley Online Library}
+}
+
+@article{xie2013structure,
+  title={Structure of the planetary boundary layer over Southeast England: Modeling and measurements},
+  author={Xie, Bo and Hunt, JCR and Carruthers, DJ and Fung, JCH and Barlow, JF},
+  journal={Journal of Geophysical Research: Atmospheres},
+  volume={118},
+  number={14},
+  pages={7799--7818},
+  year={2013},
+  publisher={Wiley Online Library}
+}
 
 %%%%%%%% WIND CHAPTER %%%%%%%%
 
