--- a/thesis.tex
+++ b/thesis.tex
@@ -48,6 +48,7 @@
 \usepackage{subcaption}
 \usepackage[CaptionAfterwards]{fltpage}
 \DeclareMathOperator*{\argmin}{argmin}
+\providecommand{\e}[1]{\ensuremath{\times 10^{#1}}}
 \PassOptionsToPackage{hyphens}{url}\usepackage{hyperref}
 
 \makeatletter
